  * libcurl.dll/dylib/so and new gems are included with Shoes. require 'typhoeus'
    to use it. When net/http and open_uri is too confusing, arcane and limiting. 
    On Windows it's not faster (or slower) - just better in other ways. 
    see https://github.com/typhoeus/typhoeus
  * Method app.resize can programaticly expand the window.
    see https://github.com/Shoes3/shoes3/issues/370
  * can enable/disable image cache #377, #323
  
=== Fixed with 3.3.4
  * When Shoes is installed on a system with existing rvm/rbenv it
    might use the wrong set of gems. 
  * Fixed some SSL issues for download and image (Windows).
    Ruby/Windows (net/http) ssl problems remain unfixed.
  * Improved Windows downloading speed - still sub-par but better than
    before. 
  * some downloaded images don't have an etag (cough, manual Image example)

=== Developer issues with 3.3.4
  * rake does a better job of dealing with changes in lib/shoes/*.rb, static/manual-en.txt
    and changes in samples/*/*.rb. You can change these without a full rebuild.
    https://github.com/Shoes3/shoes3/issues/362
  * new freebsd target (loose and tight shoes)
    
-------------- Shoes 3.3.3 ---------------------------------

=== New with 3.3.3
  * Ruby 2.2.7 and RubyGems 2.6.10 (Windows is Ruby 2.2.6)
  * can specify your own title for ask_open_file and similar file dialogs
    https://github.com/Shoes3/shoes3/issues/282
  * new manual search engine - see below.
  * tooltips for native widgets (not all widgets for all platforms)
    review the Manual for how to use. 
    https://github.com/Shoes3/shoes3/issues/340
  * new widget - Switch - kind of like checkbox but different.
    Read the manual and run the examples within.
  * new widget Spinner
    Read the manual and run the examples within.
  * related side project, exe-shoes updated. Has a gui to guide you in 
    configuring your Shoes is hidden, Windows 10 happy, app installer.
    see https://github.com/Shoes3/exe-shoes