@@ -25,8 +25,11 @@
     see https://github.com/typhoeus/typhoeus
   * Method app.resize can programaticly expand the window.
     see https://github.com/Shoes3/shoes3/issues/370
-  * can enable/disable image cache #377, #323
-  
+  * can enable/disable image cache
+    https://github.com/Shoes3/shoes3/issues/323
+    https://github.com/Shoes3/shoes3/issues/377
+    See Advanced->appmethods in Manual.
+    
 === Fixed with 3.3.4
   * When Shoes is installed on a system with existing rvm/rbenv it
     might use the wrong set of gems. 
